# open-wire

./: .dockerignore  .gitignore  BENCHMARKS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  bench_memory.sh  profile_hubleaf.sh  profile_pubonly.sh  profile_pubsub.sh  profile_run.sh
.github/workflows/: main.yml.disabled  release.yml  test.yml.disabled
async-nats/: Cargo.toml
async-nats/examples/: leaf_server.rs
async-nats/src/: lib.rs  subject.rs
async-nats/src/leafnode/: client_conn.rs  mod.rs  protocol.rs  server.rs  sub_list.rs  upstream.rs
bench/: e2e.rs
bench_clients/: go.mod  main.go
docs/: architecture.md  backlog.md  goals.md  lld.md  portability.md
docs/adr/: 001-epoll-over-tokio.md  006-sync-metrics-prometheus.md  007-batched-metrics-flush.md  007-sharded-cluster-mode.md  008-interest-collapse.md  010-full-mesh-clustering.md  011-in-process-shard-bus-spike.md  011-udp-binary-transport.md
examples/chat/: README.md
nats-server/: BENCHMARKS.md  Cargo.toml  profile.sh
nats-server/benches/: throughput.rs
nats-server/examples/: leaf_server.rs
nats-server/src/: client_conn.rs  lib.rs  nats_proto.rs  protocol.rs  server.rs  sub_list.rs  upstream.rs
open-wire/: BENCHMARKS.md  Cargo.toml  bench.sh  profile.sh  smoke_test.sh
open-wire/benches/: throughput.rs
open-wire/configs/: bench_go_leaf.conf  bench_go_leaf_ws.conf  bench_hub.conf
open-wire/docs/: architecture.md  backlog.md  goals.md  portability.md
open-wire/docs/adr/: 001-epoll-over-tokio.md  002-direct-writer.md  003-zero-copy-parsing.md  004-adaptive-buffers.md  005-batched-notifications.md
open-wire/examples/: leaf_server.rs
open-wire/src/: lib.rs  nats_proto.rs  protocol.rs  server.rs  sub_list.rs  types.rs  upstream.rs  websocket.rs  worker.rs
sample-app/: README.md
src/: client_handler.rs  config.rs  gateway_conn.rs  gateway_handler.rs  handler.rs  interest.rs  leaf_handler.rs  lib.rs  main.rs  nats_proto.rs  protocol.rs  reactor.rs  route_conn.rs  route_handler.rs  server.rs  signals.rs  sub_list.rs  types.rs  upstream.rs  util.rs  websocket.rs  worker.rs
src/cluster/: conn.rs  handler.rs
src/connector/: common.rs  mod.rs
src/connector/gateway/: conn.rs  handler.rs
src/connector/leaf/: conn.rs  handler.rs  interest.rs  mod.rs  upstream.rs
src/connector/mesh/: conn.rs  handler.rs  mod.rs
src/core/: config.rs  mod.rs  server.rs  sharded.rs  worker.rs
src/core/handler/: client.rs  conn.rs  delivery.rs  propagation.rs
src/core/io/: buf.rs  msg_writer.rs
src/core/protocol/: nats_proto.rs
src/core/pubsub/: sub_list.rs
src/gateway/: conn.rs  handler.rs  mod.rs
src/handler/: client.rs  conn.rs  delivery.rs  mod.rs  propagation.rs
src/infra/: buf.rs  config.rs  mod.rs  msg_writer.rs  nats_proto.rs  server.rs  sub_list.rs  worker.rs
src/io/: buf.rs  mod.rs  msg_writer.rs  websocket.rs
src/leaf/: conn.rs  handler.rs  interest.rs  mod.rs  upstream.rs
src/protocol/: bin_proto.rs  mod.rs  nats_proto.rs  types.rs
src/pubsub/: mod.rs  sub_list.rs  worker_interest.rs
src/udp/: transport.rs
tests/: bench_reactor.sh  binary_delivery.rs  e2e.rs  memory.sh  profile.sh  profile_cluster.sh  profile_hubleaf.sh  profile_leafhub.sh  profile_pubonly.sh  profile_pubsub.sh  profile_run.sh  smoke_test.sh  throughput.rs  throughput.sh
tests/configs/: bench_go_cluster_a.conf  bench_go_cluster_b.conf  bench_go_cluster_c.conf  bench_go_leaf.conf  bench_go_leaf_to_rust.conf  bench_go_leaf_ws.conf  bench_hub.conf  bench_rust_cluster_a.conf  bench_rust_cluster_b.conf  bench_rust_cluster_c.conf  bench_rust_hub.conf  bench_rust_tcp_cluster_a.conf  bench_rust_tcp_cluster_b.conf  bench_rust_udp_cluster_a.conf  bench_rust_udp_cluster_b.conf
