[package]
name = "open-wire"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
autobenches = false
autotests = false

[features]
default = ["interest-collapse", "subject-mapping"]
interest-collapse = []
subject-mapping = []
io-uring = ["dep:io-uring"]

[dependencies]
bytes = "1.4.0"
libc = "0.2"
memchr = "2.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.104"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
nkeys = { version = "0.4", default-features = false }
data-encoding = "2"
rustls = "0.23"
rustls-pemfile = "2"
rustls-pki-types = "1"
webpki-roots = "0.26"
io-uring = { version = "0.7", optional = true }

[dev-dependencies]
async-nats = { version = "0.46", default-features = false }
criterion = "0.5"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "throughput"
path = "tests/throughput.rs"
harness = false

[[test]]
name = "e2e"
path = "tests/e2e.rs"

[profile.release]
debug = 1
strip = false
